array.island.Island.scala.error
Compilation error:
Island:5: error: identifier expected but integer literal found.
    if(num[i]<num[i+1]) a=a+1
                    ^Island:6: error: ']' expected but '}' found.
  }
  ^